哎，怎么同步上去

--- a/WebContent/string.html
+++ b/WebContent/string.html
@@ -46,6 +46,7 @@ div.container {
 		console.log(s.charAt(6));
 		console.log(s.charCodeAt(7));
 		console.log(s.substring(0, 5));
+		console.log("s.slice(-3)----"+s.slice(-3));
 		console.log(s.slice(0, -5));
 		console.log(s.indexOf("Bai"));
 		console.log(s.search(/,([a-z]+)/));
