--- a/WebContent/e7.html
+++ b/WebContent/e7.html
@@ -6,13 +6,31 @@
 
 </head>
 <body>
-	<script type="text/javascript">
 	
-	</script>
-
 	<ul id="nav">
 		<li><a href="http://www.taobao.com">test1</a></li>
 		<li><a href="http://www.taobao.com">test2</a></li>
 		<li><a href="http://www.taobao.com">test3</a></li>
 	</ul>
+	<script type="text/javascript">
+		(function() {
+			
+			var all=document.querySelectorAll("a");
+			console.log(all);
+			function findA(root, array) {
+				for (var c = root.firstChild; c != null; c = c.nextSibling) {
+					//==1是element 继续循环
+					if (c.nodeType !== 1)
+						continue;
+					if (c.tagName == "A") {
+						array.push(c);
+					} else {
+						 findA(c, array);
+					}
+				}
+				return array;
+			}
+		console.log(findA(document.body, []));
+		}());
+	</script>
 </html>
